--- a/lib/template/styleguide.css
+++ b/lib/template/styleguide.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700);
+@import url(https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css);
 
 body {
     background: #fbfbfb;
